[gd_scene load_steps=9 format=2]

[ext_resource path="res://title_screen/buttons/farmmode/Easy.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/buttons/farmmode/normal.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/buttons/farmmode/hard.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/fonts/ARCADECLASSIC.TTF" type="FontFile" id=4]
[ext_resource path="res://02_farm/000-EX.png" type="Texture2D" id=5]
[ext_resource path="res://Menufarm.gd" type="Script" id=6]
[ext_resource path="res://title_screen/back.tscn" type="PackedScene" id=7]

[sub_resource type="FontFile" id=1]
size = 157
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="000-EX" type="Sprite2D" parent="."]
position = Vector2( 2119.62, 169.89 )
texture = ExtResource( 5 )

[node name="Button3" parent="." instance=ExtResource( 2 )]
offset_left = 395.868
offset_top = 358.39
offset_right = 687.868
offset_bottom = 437.39

[node name="Button2" parent="." instance=ExtResource( 3 )]
offset_left = 417.868
offset_top = 472.39
offset_right = 709.868
offset_bottom = 551.39

[node name="Button" parent="." instance=ExtResource( 1 )]
offset_left = 417.868
offset_top = 214.39
offset_right = 709.868
offset_bottom = 293.39

[node name="Label" type="Label" parent="."]
offset_left = 64.8439
offset_top = 45.8653
offset_right = 1242.84
offset_bottom = 205.865
scale = Vector2( 0.75, 0.75 )
theme_override_fonts/font = SubResource( 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
text = "Escape war zone "
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="back" parent="." instance=ExtResource( 7 )]
offset_left = 906.946
offset_top = 550.003
offset_right = 1099.95
offset_bottom = 629.003
scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
